--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,8 @@ universal = 1
 
 [flake8]
 exclude = docs
+max-line-length = 100
 
 [aliases]
 # Define setup.py command aliases here
 test = pytest
-
-[tool:pytest]
-collect_ignore = ['setup.py']
-
