--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,67 @@
-pip==19.2.3
+alabaster==0.7.12
+appdirs==1.4.4
+argh==0.26.2
+astroid==2.4.2
+atomicwrites==1.4.0
+attrs==20.2.0
+Babel==2.8.0
+bleach==3.2.1
 bump2version==0.5.11
-wheel==0.33.6
-watchdog==0.9.0
-flake8==3.7.8
-tox==3.14.0
+certifi==2020.6.20
+chardet==3.0.4
+-e git+git@github.com:caioaao/compynent.git@7e411fc0b533a33721cf26e17b0282f505f0632f#egg=compynent
 coverage==4.5.4
-Sphinx==1.8.5
-twine==1.14.0
+distlib==0.3.1
+docutils==0.16
+entrypoints==0.3
+filelock==3.0.12
+flake8==3.7.8
+idna==2.10
+imagesize==1.2.0
+importlib-metadata==2.0.0
+iniconfig==1.0.1
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==8.5.0
+packaging==20.4
+pathtools==0.1.2
+pkginfo==1.5.0.1
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+Pygments==2.7.1
+pyparsing==2.4.7
 pytest==4.6.5
 pytest-runner==5.1
-importlib_metadata==2.0.0
+pytz==2020.1
+PyYAML==5.3.1
+readme-renderer==26.0
+requests==2.24.0
+requests-toolbelt==0.9.1
+six==1.15.0
+snowballstemmer==2.0.0
+Sphinx==1.8.5
+sphinx-autoapi==1.5.1
+sphinx-rtd-theme==0.5.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-websupport==1.2.4
+toml==0.10.1
+tox==3.14.0
+tqdm==4.50.1
+twine==1.14.0
+Unidecode==1.1.1
+urllib3==1.25.10
+virtualenv==20.0.33
+watchdog==0.9.0
+wcwidth==0.2.5
+webencodings==0.5.1
+wrapt==1.12.1
+zipp==3.3.0
